2003-01-16  Darin Adler  <darin@apple.com>

        Reviewed by John.

	- added an API for dumping the external representation of the render tree for testing

        * Misc.subproj/WebCoreStatistics.h: Added renderTreeAsExternalRepresentation.
        * Misc.subproj/WebCoreStatistics.m: (-[WebFrame renderTreeAsExternalRepresentation]): Added.

	- removed remnants of an earlier more-naive cut at this same sort of thing

        * Misc.subproj/WebTestController.h: Removed.
        * Misc.subproj/WebTestController.m: Removed.
        * WebKit.exp: Removed WebTestController.
        * WebKit.pbproj/project.pbxproj: Removed WebTestController.

	- other changes

        * WebCoreSupport.subproj/WebBridge.m: Had added new copyright date to touch a file.
	That's not needed any more, but the date should be updated anyway.

=== Safari-52 ===

2003-01-15  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	- fixed 3143418 - controller assert in WebStandardPanels _didStartLoadingURL
	- fixed 3141212 - crash in kjs garbage collection (contextimp mark)

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge startLoadingResource:withURL:]): If the data source
	doesn't have a controller, then block the load.

2003-01-15  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

	- fixed problem where Content-Type was going into WebCore with suffixes like "charset"

        * WebView.subproj/WebDataSourcePrivate.m: (-[WebDataSource _commitIfReady:]):
	Pass in contentType from the response, rather than the "Content-Type" header.
	Also pass in the refresh header separately.

        * English.lproj/StringsNotToBeLocalized.txt: Updated for above change.

2003-01-13  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin, Dave and Trey, and given the seal of approval by Don.

	Use new safer file removal call that does not handle directories.

        * Downloads.subproj/WebDownloadHandler.m:
	(-[WebDownloadHandler cleanUpAfterFailure]): Use