@@ -409,6 +409,18 @@ typedef struct {
     return YES;
 }
 
+// AppKit doesn't call mouseDown or mouseUp on right-click. Simulate a control-click
+// mouseDown and mouseUp so plug-ins get the right-click event as they do in Carbon (3125743).
+- (void)rightMouseDown:(NSEvent *)theEvent
+{
+    [self mouseDown:theEvent];
+}
+
+- (void)rightMouseUp:(NSEvent *)theEvent
+{
+    [self mouseUp:theEvent];
+}
+
 - (void)mouseDown:(NSEvent *)theEvent
 {
     EventRecord event;
